# bublik

./: .gitignore  README.md
data/: banks.json  cards.json  users.json
macros/: Cargo.toml
macros/src/: validation.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
server/src/api/: mod.rs  validation_error.rs
server/src/api/controllers/: bank.rs  card.rs  mod.rs  user.rs
server/src/models/: bank.rs  browse.rs  card.rs  mod.rs  user.rs
