[package]
name = "bublik-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bublik-macros = { path = "../macros"}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
poem = { version = "1.3.57", features = ["anyhow", "chrono"] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "chrono"] }
sqlx = { version = "0.7.1", features = ["chrono", "sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
int-enum = "0.5.0"
regex = "1.9.1"
trim-in-place = "0.1.7"
